fixed issue in info block - icon vertical alignment

--- a/src/blocks/info-block/styles/styles.editor.scss
+++ b/src/blocks/info-block/styles/styles.editor.scss
@@ -21,7 +21,7 @@
 .responsive-block-editor-addons-ifb-icon svg {
   width: inherit;
   height: inherit;
-  vertical-align: middle;
+  vertical-align: baseline;
 }
 
 .infobox-icon-above-title .responsive-block-editor-addons-ifb-left-right-wrap {
